--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Chain Reaction</title>
-        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1>Chain Reaction</h1>
         <canvas id="canvas" width="512" height="512"></canvas>
 
-        <script type="module" src="index.js"></script>
+        <script type="module" src="bundle.js"></script>
     </body>
 </html>
